Save local changes before pulling

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,5 @@
 <header>
-  <div class="branding">
+  <div class="logo">
     <h1>CSE Motors</h1>
-    <p class="tagline">Driven by Quality. Powered by Trust.</p>
   </div>
 </header>
