--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,7 @@
 <nav>
-  <ul class="nav-list">
+  <ul class="nav">
     <li><a href="/">Home</a></li>
     <li><a href="#">Inventory</a></li>
-    <li><a href="#">Financing</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
