--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-  <p>&copy; 2025 CSE Motors. All rights reserved.</p>
+  <p>&copy; <%= new Date().getFullYear() %> CSE Motors. All rights reserved.</p>
 </footer>
